appId: com.curso.shopdemo
env:
 EMAIL: ${EMAIL || "cliente@shopdemo.com"}
 SENHA: ${SENHA || "123456"}
---
- extendedWaitUntil:
    visible:
      id: "input-email"
    timeout: 60000
- tapOn:
    id: "input-email"
- inputText: ${EMAIL}
- tapOn:
    id: "input-senha"
- inputText: ${SENHA}
- hideKeyboard
- tapOn: "btn-entrar"
- extendedWaitUntil:
    visible:
      id: "tela-catalogo"
    timeout: 60000
- assertVisible:
    id: "tela-catalogo"